# DocVault

./: .gitignore  CLAUDE.md  LICENSE  README.md  dev.sh  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-linux.yml  build-macos-arm.yml  build-macos-x86.yml  build-windows.yml  release.yml
docs/: DocVault_Technical_Specification.md  USER_GUIDE.md
keygen/: Cargo.toml  keygen.js  package.json
keygen/src/: main.rs
src/: app.config.json  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt
src-tauri/migrations/: 001_initial.sql  002_add_ocr_text.sql  003_fts5_and_drive.sql  004_add_subcategories.sql  005_group_default_categories.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  categories.rs  documents.rs  export.rs  files.rs  import.rs  license.rs  mod.rs  ocr.rs  search.rs  settings.rs  sync.rs  tags.rs  untracked.rs  update.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/models/: category.rs  document.rs  event_log.rs  mod.rs  preset_field.rs  settings.rs  tag.rs
src-tauri/src/utils/: date.rs  file_ops.rs  hash.rs  mod.rs
src/assets/lib/: README.txt
src/css/: input.css  output.css
src/js/: api.js  app-config.js  app.js  i18n.js  router.js  store.js
src/js/components/: bottom-nav.js  custom-field.js  deleted-modal.js  document-card.js  document-grid.js  expiry-badge.js  filter-bar.js  header.js  modal.js  pagination.js  preset-selector.js  sidebar.js  tag-input.js  toast.js  untracked-modal.js
(+22 files in other folders)
